[gd_scene load_steps=12 format=3 uid="uid://bx0txhxjkyhjm"]

[ext_resource type="PackedScene" uid="uid://d1n8myprnfe23" path="res://scenes/paddle.tscn" id="1_nq1gj"]
[ext_resource type="Texture2D" uid="uid://crl7dynntv6ws" path="res://assets/Bg.png" id="1_rs1v7"]
[ext_resource type="PackedScene" uid="uid://t1hnw4lyl6uv" path="res://scenes/ball.tscn" id="2_fyscm"]
[ext_resource type="Script" uid="uid://rip1p265chbw" path="res://scripts/game.gd" id="2_soyev"]
[ext_resource type="PackedScene" uid="uid://dbwter0xbbyru" path="res://scenes/score_area.tscn" id="3_midwd"]
[ext_resource type="Script" uid="uid://cb6lo2kbdkqjp" path="res://scripts/borders.gd" id="4_d1pwm"]
[ext_resource type="PackedScene" uid="uid://cb4sl8wukmrvp" path="res://scenes/borders.tscn" id="4_pcnv2"]
[ext_resource type="Script" uid="uid://4ps1xo0g1qoe" path="res://scripts/score_area.gd" id="6_fdqf0"]
[ext_resource type="Script" uid="uid://hmxbf75goqu4" path="res://scripts/player.gd" id="6_ydkt2"]
[ext_resource type="Script" uid="uid://cbptrh805wyal" path="res://scripts/ai.gd" id="7_n8v2t"]
[ext_resource type="Script" uid="uid://byxp04vmaexam" path="res://scripts/ball.gd" id="9_b6bvg"]

[node name="Game" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_rs1v7")
centered = false
script = ExtResource("2_soyev")

[node name="Borders" parent="." instance=ExtResource("4_pcnv2")]
script = ExtResource("4_d1pwm")

[node name="ScoreArea" parent="." instance=ExtResource("3_midwd")]
script = ExtResource("6_fdqf0")

[node name="Player" parent="." instance=ExtResource("1_nq1gj")]
position = Vector2(20, 324)
script = ExtResource("6_ydkt2")

[node name="AI" parent="." instance=ExtResource("1_nq1gj")]
position = Vector2(1112, 324)
script = ExtResource("7_n8v2t")

[node name="Ball" parent="." instance=ExtResource("2_fyscm")]
position = Vector2(576, 324)
script = ExtResource("9_b6bvg")

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
